setuptools modifications (based on info from https://packaging.python.org/en/latest/overview/)

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,10 @@
 [metadata]
+name = pygame_app
+version = 0.0.1
 description_file = README.md
+
+[options]
+packages = pygame_app
+install_requires =
+    requests
+    importlib-metadata; python_version < "3.8"
